# MoveNMergeIt

./: CMakeLists.txt  README  README.md
include/: definitions.hpp  gui.hpp  position.hpp
src/: gui.cpp  main.cpp  position.cpp
